--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+body {
+    background-image: url(https://i.pinimg.com/564x/c6/c0/89/c6c089a123f8ef8e9737ddb608a1935e.jpg);
+}
